--- a/action.yml
+++ b/action.yml
@@ -10,9 +10,8 @@ inputs:
     required: false
     default: ${{ github.ref_type }}
   tomls:
-    description: An array of Cargo.toml paths to check
+    description: One or more Cargo.toml paths to check, specified as a multiline input
     required: false
-    default: []
 runs:
   using: 'node16'
   main: 'index.js'
